--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
 
 <div id="copyright">
 <p>Computing X is a fortune 500 company based in Dunedin, New Zealand. We specialise in making games, that anyone can enjoy for free!</p>
-<P> Copyright to Zac Bowmar, website creator! </P>
+<P> Copyright to Zac, website creator! </P>
 </div>
 
 </body>
